Fixes for feedback of Skins and Custom CSS (#460)
* fix: Replace “layer” keyword with chapter

* feat: add placeholder for css input field

* fix: fix null offset error for custom css setting access

* feat: allow user to view previous chapters through control bar

* feat: improve css input field

* fix: shift branding to last in the video editor

* feat: replace time format instruction with read more link

* fix: fix duration label in slider

* feat: add truncate for long chapter names

--- a/pages/video-editor/style.scss
+++ b/pages/video-editor/style.scss
@@ -268,6 +268,13 @@
 				white-space: nowrap;
 				font-size: 11px;
 			}
+
+			.chapter-indicator--text {
+				max-width: var(--hover-width, 8px);
+				overflow: hidden;
+				white-space: nowrap;
+				text-overflow: ellipsis;
+			}
 		}
 	}
 }
@@ -290,4 +297,8 @@
 .disabled .components-combobox-control__suggestions-container {
 	pointer-events: none;
 	opacity: 0.5;
+}
+
+#branding-icon {
+	order: 9;
 }
